--- a/daulThrust/src/main/resources/config/log4j.properties
+++ b/daulThrust/src/main/resources/config/log4j.properties
@@ -1,13 +1,10 @@
-log4j.rootLogger=DEBUG, file ,console
-
+log4j.rootLogger=INFO, file ,console
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 ImmediateFlush=true
 log4j.appender.file.File=/home/tonyqi/log/strategy
 log4j.appender.file.DatePattern='_'yyyy-MM-dd'.log'
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%p %m - [%c %L] - %d{HH:mm:ss} %n
-
-
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%p %m - [%c %L] - %d{HH:mm:ss} %n
