--- a/daulThrust/pom.xml
+++ b/daulThrust/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.miller.daulThrust</groupId>
-    <artifactId>com.miller.daulThrust</artifactId>
-    <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>strategy</groupId>
+    <artifactId>strategy</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0</version>
     <name>com.miller.daulThrust Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -67,12 +67,51 @@
     </dependencies>
 
     <build>
-        <finalName>com.miller.daulThrust</finalName>
+        <finalName>strategy30</finalName>
         <plugins>
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-jar-plugin</artifactId>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>copy</id>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>jar</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<outputDirectory>-->
+                                <!--${project.build.directory}/job/bin-->
+                            <!--</outputDirectory>-->
+                            <!--<archive>-->
+                                <!--<manifest>-->
+                                    <!--<addClasspath>true</addClasspath>-->
+                                    <!--<classpathPrefix>../lib/</classpathPrefix>-->
+                                    <!--<mainClass>webSocket.Example</mainClass>-->
+                                <!--</manifest>-->
+                                <!--<manifestEntries>-->
+                                    <!--<Class-Path>../</Class-Path>-->
+                                <!--</manifestEntries>-->
+                            <!--</archive>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<excludes>-->
+                        <!--<exclude>**/*.xml</exclude>-->
+                        <!--<exclude>**/*.properties</exclude>-->
+                        <!--<exclude>spring/</exclude>-->
+                        <!--<exclude>config/</exclude>-->
+                    <!--</excludes>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.2</version>
+                <version>2.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -94,9 +133,6 @@
                                     <!--<resource>META-INF/spring.schemas</resource>-->
                                 <!--</transformer>-->
                             </transformers>
-                            <outputDirectory>
-                                ${project.build.directory}/daulThrust
-                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
