--- a/daulThrust/src/main/resources/log4j.properties
+++ b/daulThrust/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
 log4j.rootLogger=INFO, file ,console
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 ImmediateFlush=true
-log4j.appender.file.File=/home/tonyqi/log/strategy
+log4j.appender.file.File=/home/tonyqi/log/strategy30min
 log4j.appender.file.DatePattern='_'yyyy-MM-dd'.log'
+#log4j.appender.file.MaxFileSize=5120KB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%p %m - [%c %L] - %d{HH:mm:ss} %n
 log4j.appender.console=org.apache.log4j.ConsoleAppender
