分时动态传入，动态生成log文件,以及配置止损 = 分时*2

--- a/daulThrust/pom.xml
+++ b/daulThrust/pom.xml
@@ -67,7 +67,7 @@
     </dependencies>
 
     <build>
-        <finalName>strategy30</finalName>
+        <finalName>strategy</finalName>
         <plugins>
 
             <!--<plugin>-->
